--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_END = development
-MONGO_URI = mongodb://127.0.0.1:27017/online-cinema
+MONGO_URI = mongodb://127.0.0.1:27017/online-cinema?directConnection=true
 JWT = 123123GFDHHFGJ
